--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "joi": "^14.3.1",
     "knex": "^0.16.5",
     "mysql": "^2.17.1",
     "winston": "^3.2.1"
